--- a/Instagram/Info.plist
+++ b/Instagram/Info.plist
@@ -2,6 +2,8 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>NSCameraUsageDescription</key>
+	<string>Instagram needs your permission to acces your camera!</string>
 	<key>NSPhotoLibraryUsageDescription</key>
 	<string>Instagram needs your permission to access your photos!</string>
 	<key>CFBundleDevelopmentRegion</key>
